--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org"   xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html lang="en" xmlns:th="https://thymeleaf.org"  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"> 
 
 <head>
   <meta charset="utf-8">
@@ -7,7 +7,7 @@
   <meta name="description" content="Creative - Bootstrap 3 Responsive Admin Template">
   <meta name="author" content="GeeksLabs">
   <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
-  <link rel="shortcut icon" href="img/favicon.png">
+  <link rel="shortcut icon" th:href="@{img/favicon.png}">
 
   <title>DBakes Restaurant and Bakery</title>
 
@@ -21,8 +21,9 @@
     <link th:href="@{/css/font-awesome.min.css}" rel="stylesheet" />
 
     <!-- Load font awesome icons -->
-    <link rel="stylesheet" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css}">+
-<!--<link rel=”stylesheet”  thhref=”https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css”  integrity=”sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I” crossorigin=”anonymous”>-->
+   
+    <!-- <link rel="stylesheet" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css}"> -->
+
     <!-- full calendar css-->
   <link th:href="@{/assets/fullcalendar/fullcalendar/bootstrap-fullcalendar.css}" rel="stylesheet" />
   <link th:href="@{/assets/fullcalendar/fullcalendar/fullcalendar.css}" rel="stylesheet" />
@@ -55,7 +56,7 @@
       </div>
 
       <!--logo start-->
-      <a href="/index" class="logo">Delicious <span class="lite">bakes</span>(Bakery, Restaurant and Catering)</a>
+      <a th:href="@{/index}" class="logo">Delicious <span class="lite">bakes</span>(Bakery, Restaurant and Catering)</a>
       <!--logo end-->
 
       <div class="nav search-row" id="top_menu">
@@ -71,10 +72,10 @@
       </div>
 
       <div class="top-nav notification-row">
-        <!-- notificatoin dropdown start-->
+        <!-- notification dropdown start-->
         <ul class="nav pull-right top-menu">
 
-          <!-- task notificatoin start -->
+          <!-- task notification start -->
           <li id="task_notificatoin_bar" class="dropdown">
             <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                             <i class="icon-task-l"></i>
@@ -172,7 +173,7 @@
               </li>
               <li>
                 <a href="#">
-                                    <span class="photo"><img alt="avatar" src="../img/avatar-mini.jpg"></span>
+                                    <span class="photo"><img alt="avatar" th:src="@{../img/avatar-mini.jpg}"></span>
                                     <span class="subject">
                                     <span class="from">Greg  Martin</span>
                                     <span class="time">1 min</span>
@@ -184,7 +185,7 @@
               </li>
               <li>
                 <a href="#">
-                                    <span class="photo"><img alt="avatar" src="../img/avatar-mini2.jpg"></span>
+                                    <span class="photo"><img alt="avatar" th:src="@{../img/avatar-mini2.jpg}"></span>
                                     <span class="subject">
                                     <span class="from">Bob   Mckenzie</span>
                                     <span class="time">5 mins</span>
@@ -196,7 +197,7 @@
               </li>
               <li>
                 <a href="#">
-                                    <span class="photo"><img alt="avatar" src="../img/avatar-mini3.jpg"></span>
+                                    <span class="photo"><img alt="avatar" th:src="@{../img/avatar-mini3.jpg}"></span>
                                     <span class="subject">
                                     <span class="from">Phillip   Park</span>
                                     <span class="time">2 hrs</span>
@@ -208,7 +209,7 @@
               </li>
               <li>
                 <a href="#">
-                                    <span class="photo"><img alt="avatar" src="../img/avatar-mini4.jpg"></span>
+                                    <span class="photo"><img alt="avatar" th:src="@{../img/avatar-mini4.jpg}"></span>
                                     <span class="subject">
                                     <span class="from">Ray   Munoz</span>
                                     <span class="time">1 day</span>
@@ -274,7 +275,7 @@
             <li class="dropdown">
                 <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                             <span class="profile-ava">
-                                <img alt="" src="img/avatar1_small.jpg">
+                                <img alt="" th:src="@{img/avatar1_small.jpg}">
                             </span>
                     <span class="username">Jenifer Smith</span>
                     <b class="caret"></b>
@@ -317,7 +318,7 @@
               <!-- sidebar menu start-->
               <ul class="sidebar-menu">
                   <li class="active">
-                      <a class="" href="/index">
+                      <a class="" th:href="@{/index}">
                           <i class="icon_house_alt"></i>
                           <span>Dashboard</span>
                       </a>
@@ -329,7 +330,7 @@
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
                       <ul class="sub">
-                          <li><a class="" href="/fleet">Fleet Home</a></li>
+                          <li><a class="" th:href="@{/fleet}">Fleet Home</a></li>
                       </ul>
                   </li>
                   <li class="sub-menu">
@@ -339,7 +340,7 @@
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
                       <ul class="sub">
-                          <li><a class="" href="/hr">HR Home</a></li>
+                          <li><a class="" th:href="@{/hr}">HR Home</a></li>
                       </ul>
                   </li>
                   <li class="sub-menu">
@@ -349,7 +350,7 @@
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
                       <ul class="sub">
-                          <li><a class="" href="/accounts">Accounts Home</a></li>
+                          <li><a class="" th:href="@{/accounts}">Accounts Home</a></li>
                       </ul>
                   </li>
                   <li class="sub-menu">
@@ -359,7 +360,7 @@
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
                       <ul class="sub">
-                          <li><a class="" href="/helpdesk">HelpDesk</a></li>
+                          <li><a class="" th:href="@{/helpdesk}">HelpDesk</a></li>
                       </ul>
                   </li>
                   <li class="sub-menu">
@@ -369,7 +370,7 @@
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
                       <ul class="sub">
-                          <li><a class="" href="/parameters">Parameters Home</a></li>
+                          <li><a class="" th:href="@{/parameters}">Parameters Home</a></li>
                       </ul>
                   </li>
 
@@ -392,7 +393,7 @@
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
                       <ul class="sub">
-                          <li><a class="" href="/security">Security Home</a></li>
+                          <li><a class="" th:href="@{/security}">Security Home</a></li>
                       </ul>
                   </li>
               </ul>
@@ -415,7 +416,7 @@
             Licensing information: https://bootstrapmade.com/license/
             Purchase the pro version form: https://bootstrapmade.com/buy/?theme=NiceAdmin
           -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+          Designed by <a th:href="@{https://bootstrapmade.com/}">BootstrapMade</a>
         </div>
       </div>
     </section>
@@ -435,7 +436,7 @@
   <script th:src="@{/js/jquery.nicescroll.js}" type="text/javascript"></script>
   <!-- charts scripts -->
   <script th:src="@{/assets/jquery-knob/js/jquery.knob.js}"></script>
-  <script th:src="@{/js/jquery.sparkline.js}" type="text/javascript}"></script>
+  <script th:src="@{/js/jquery.sparkline.js}" type="text/javascript      "></script>
   <script th:src="@{/assets/jquery-easy-pie-chart/jquery.easy-pie-chart.js}"></script>
   <script th:src="@{/js/owl.carousel.js}"></script>
   <!-- jQuery full calendar -->
@@ -449,7 +450,7 @@
     <script th:src="@{/js/jquery.customSelect.min.js}"></script>
     <script th:src="@{/assets/chart-master/Chart.js}"></script>
 
-    <!--custom script for all page-->
+    <!--custome script for all page-->
     <script th:src="@{/js/scripts.js}"></script>
     <!-- custom script for this page-->
     <script th:src="@{/js/sparkline-chart.js}"></script>
@@ -511,9 +512,6 @@
       });
     </script>
 
-<script src=”https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js” integrity=”sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo” crossorigin=”anonymous”></script>
-
-<script src=”https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js” integrity=”sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/” crossorigin=”anonymous”></script>
   <th:block layout:fragment="script"></th:block>
 
 </body>
