--- a/src/main/resources/templates/parameters/categoryList.html
+++ b/src/main/resources/templates/parameters/categoryList.html
@@ -11,7 +11,7 @@
       <ol class="breadcrumb">
         <li><i class="fa fa-home"></i><a href="/index">Home</a></li>
         <!-- <li><i class="fa fa-bars"></i><a href="/parameters">Parameters</a></li> -->
-        <li><i class="fa fa-square-o"></i>Countries</li>
+        <li><i class="fa fa-square-o"></i>Categories</li>
       </ol>
     </div>
   </div>
@@ -24,34 +24,29 @@
   <section class="panel">
 
               <div class="panel-body">
-                <a href="/countryAdd" class="btn btn-primary"> New Country </a>
+                <a th:href="@{/categoryAdd}" class="btn btn-primary"> New Category </a>
               </div>
             </section> 
         <table class="table table-striped table-advance table-hover">
           <tbody>
           <tr>
-            <th><i class="icon_mail_alt"></i> Code</th>
-            <th><i class="icon_pin_alt"></i> Nationality</th>
-            <th><i class="icon_profile"></i> Description</th>
-            <th><i class="icon_mobile"></i> Continent</th>
-            <th><i class="icon_calendar"></i> Capital</th>
-            <th><i class="icon_cogs"></i> Action</th>
+            <th><i class="icon_mail_alt"></i> id</th>
+            <th><i class="icon_pin_alt"></i> categoryName</th>
+           
           </tr>
-          <tr th:each="country:${countries}">
-            <td th:text="${country.code}" ></td>
-            <td th:text="${country.nationality}" ></td>
-            <td th:text="${country.description}" ></td>
-            <td th:text="${country.continent}" ></td>
-            <td th:text="${country.capital}"></td>
+          <tr th:each="category:${categories}">
+            <td th:text="${category.id}" ></td>
+            <td th:text="${category.categoryName}" ></td>
+           
             <td>
               <div class="btn-group">
-                <a class="btn btn-primary"  th:href="@{'/countryDetails/' + ${country.id}}"><i class="icon_plus_alt2"></i></a>
-                <a class="btn btn-success" th:href="@{'/updateCountry/'+${country.id}}">
+                <a class="btn btn-primary"  th:href="@{'/categoryDetails/' + ${category.id}}"><i class="icon_plus_alt2"></i></a>
+                <a class="btn btn-success" th:href="@{'/updateCategory/'+${category.id}}">
                 <i class="icon_check_alt2" ></i>
               </a>
                 <a class="btn btn-danger" 
                 onclick="return confirm('Are you sure you want to delete this record')"
-                 th:href="@{'/countries/delete/' + ${country.id}}">
+                 th:href="@{'/categories/delete/' + ${category.id}}">
                  <i class="icon_close_alt2"></i></a> 
               </div>
             </td>
